dropshot/tests/fail/bad_endpoint5.stderr
error[E0277]: the trait bound `for<'de> QueryParams: serde::de::Deserialize<'de>` is not satisfied
  --> tests/fail/bad_endpoint5.rs:25:14
   |
25 |     _params: Query<QueryParams>,
   |              ^^^^^^^^^^^^^^^^^^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `QueryParams`
   |
   = help: the following other types implement trait `serde::de::Deserialize<'de>`:
             &'a [u8]
             &'a camino::Utf8Path
             &'a std::path::Path
             &'a str
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
           and $N others
   = note: required for `QueryParams` to implement `serde::de::DeserializeOwned`
note: required by a bound in `dropshot::Query`
  --> src/extractor/query.rs
   |
   | pub struct Query<QueryType: DeserializeOwned + JsonSchema + Send + Sync> {
   |                             ^^^^^^^^^^^^^^^^ required by this bound in `dropshot::Query`
